force-app/main/default/objects/Missing_Item__c/Missing_Item__c.object-meta.xml
<CustomObject>
    <label>Missing Item</label>
    <pluralLabel>Missing Items</pluralLabel>
    <nameField>
        <label>Missing Item Name</label>
        <type>AutoNumber</type>
        <displayFormat>MI-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>