force-app/main/default/objects/Missing_Item__c/fields/Is_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Is_Resolved__c</fullName>
    <label>Resolved</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>