force-app/main/default/objects/Missing_Item__c/fields/Missing_Message__c.field-meta.xml
<CustomField>
    <fullName>Missing_Message__c</fullName>
    <label>Missing Message</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>