force-app/main/default/objects/Missing_Item__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>