force-app/main/default/objects/Missing_Item__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Submission</label>
    <type>MasterDetail</type>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Missing Items</relationshipLabel>
    <relationshipName>Missing_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>